# fastapi_zero

./: .gitignore  database.db  pyproject.toml
anotacoes/aula 01/: anotações.md
anotacoes/aula 02/: anotacoes.md
anotacoes/aula 03/: anotacoes.md
anotacoes/aula 04/: anotacoes.md
migrations/: env.py
migrations/versions/: bccedab14bd6_create_users_table.py
src/fastapi_zero/: app.py  schemas.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
