[project]
name = "Curso_fastapi_zero"
version = "0.1.0"
description = ""
authors = [
    {name = "adonaiarruda",email = "joseadonai.jr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.0,<0.15.0)"
]

[tool.poetry]
packages = [{include = "fastapi_zero", from = "src"}]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings' # tira warning de bibioteca deprecada 

[tool.taskipy.tasks]
lint = 'ruff check'
run = 'fastapi dev src/fastapi_zero/app.py'

pre_format = 'ruff check --fix'
format = 'ruff format'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/fastapi_zero -vv'
post_test = 'coverage html'